feat: Add AI-driven troubleshooting feature
- Add separate troubleshooting mode with UI toggle (Command/Troubleshoot)
- Implement multi-step workflow engine (diagnostics, fixes, verification)
- Create specialized AI prompt for error analysis and remediation
- Add /troubleshoot and /troubleshoot/execute REST endpoints
- Include risk level assessment (low/medium/high) with color coding
- Maintain complete separation from existing command generation feature
- Update .gitignore with OpsPilot-specific entries
- Add comprehensive documentation and test scripts

New Files:
- ai_shell_agent/prompt_troubleshoot.py: Specialized troubleshooting prompt
- ai_shell_agent/ai_troubleshoot.py: AI handler for error analysis
- ai_shell_agent/troubleshoot_runner.py: Workflow execution engine
- TROUBLESHOOT_FEATURE.md: Complete feature documentation
- test_troubleshoot.py: Test script for AI responses
- Helper scripts: Git commit guides and automation

Modified Files:
- app.py: Added troubleshooting endpoints
- frontend/index.html: Added mode toggle and troubleshoot input
- frontend/app.js: Added troubleshooting UI logic (~240 lines)
- frontend/style.css: Added troubleshoot mode styling
- .gitignore: Added OpsPilot-specific entries

--- a/opsPilot/frontend/index.html
+++ b/opsPilot/frontend/index.html
@@ -37,12 +37,27 @@
         <div class="chat-header">
           <img src="brain.svg" alt="Brain Logo" class="brain-logo" />
           <span class="logo-text">opsPilot AI</span>
+          <div class="mode-toggle">
+            <button id="mode-command" class="mode-btn active">Command</button>
+            <button id="mode-troubleshoot" class="mode-btn">Troubleshoot</button>
+          </div>
         </div>
         <div id="chat-container"></div>
-        <div class="chat-input-container">
-          <textarea id="user-input" rows="2" placeholder="Type a command..."></textarea>
+        
+        <!-- Command Mode Input (default) -->
+        <div id="command-input-container" class="chat-input-container">
+          <textarea id="user-input" rows="2" placeholder="Type a command request..."></textarea>
           <button id="ask">
             <span class="btn-text">Ask AI</span>
+            <span class="spinner hidden"></span>
+          </button>
+        </div>
+        
+        <!-- Troubleshoot Mode Input (hidden by default) -->
+        <div id="troubleshoot-input-container" class="chat-input-container hidden">
+          <textarea id="error-input" rows="3" placeholder="Paste error message or describe the problem..."></textarea>
+          <button id="troubleshoot-btn">
+            <span class="btn-text">Troubleshoot</span>
             <span class="spinner hidden"></span>
           </button>
         </div>
