pipeline-healing module added + test ansible medule for testing

--- a/opsPilot/frontend/index.html
+++ b/opsPilot/frontend/index.html
@@ -21,6 +21,7 @@
       <h1>Connect to Server</h1>
       <input id="host" type="text" placeholder="Remote Host" />
       <input id="user" type="text" placeholder="Username" />
+      <input id="password" type="password" placeholder="Password (optional)" />
       <div id="login-error" class="error-msg"></div>
       <button id="connect-button">
         <span class="btn-text">Connect</span>
