--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,6 +41,7 @@
           <div class="mode-toggle">
             <button id="mode-command" class="mode-btn active">Command</button>
             <button id="mode-troubleshoot" class="mode-btn">Troubleshoot</button>
+            <button id="nav-ci" class="mode-btn">CI</button>
           </div>
         </div>
         <div id="chat-container"></div>
@@ -84,5 +85,6 @@
   <script src="js/command-mode.js"></script>
   <script src="js/troubleshoot-mode.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/ci-dashboard.js"></script>
 </body>
 </html>
