test configuration with jenkins

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -215,6 +215,8 @@
           </div>
           
           <div class="form-actions">
+            <!-- Inline message area for test/save feedback -->
+            <div id="profile-form-message" class="profile-message hidden" role="status" aria-live="polite"></div>
             <button type="button" id="test-connection-btn" class="secondary-btn">
               <span class="btn-text">Test Connection</span>
               <span class="spinner hidden"></span>
