--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AI Shell Assistant</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/logs-mode.css" />
   <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/xterm/lib/xterm.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm/css/xterm.css"/>
@@ -272,6 +273,7 @@
   <script src="js/profiles.js"></script>
   <script src="js/command-mode.js"></script>
   <script src="js/troubleshoot-mode.js"></script>
+  <script src="js/logs-mode.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
