Fix logs mode functionality and Jenkins test_connection URL reporting
- Add logs mode button directly to HTML template
- Add event listener for logs mode in main.js
- Remove duplicate dynamic button creation from logs-mode.js
- Fix Jenkins test_connection method to include url_tested field in all return cases
- Ensure proper URL detection for Jenkins instances including /tools/jenkins paths

All tests pass and logs mode is now fully functional.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,6 +53,7 @@
           <div class="mode-toggle">
             <button id="mode-command" class="mode-btn active">Command</button>
             <button id="mode-troubleshoot" class="mode-btn">Troubleshoot</button>
+            <button id="mode-logs" class="mode-btn">Logs</button>
           </div>
         </div>
         <div id="chat-container"></div>
