--- a/frontend/index.html
+++ b/frontend/index.html
@@ -96,19 +96,9 @@
                   <button id="config-ansible-btn" class="config-btn">Configure</button>
                 </div>
               </div>
-              <div class="config-row">
-                <div class="config-item">
-                  <label for="server-name-input">Server Name:</label>
-                  <input type="text" id="server-name-input" placeholder="e.g., web-server-01" />
-                </div>
-                <button id="fetch-builds-btn" class="primary-btn">
-                  <span class="btn-text">Fetch Builds</span>
-                  <span class="spinner hidden"></span>
-                </button>
-              </div>
               <div class="config-row console-url-section">
                 <div class="config-item console-url-item">
-                  <label for="console-url-input">Or paste Console URL:</label>
+                  <label for="console-url-input">Paste Console URL:</label>
                   <input type="url" id="console-url-input" placeholder="https://jenkins.example.com/job/MyJob/123/console" />
                   <small class="form-help">Direct link to specific Jenkins job console</small>
                 </div>
@@ -122,7 +112,7 @@
           <div class="logs-content">
             <div class="builds-list" id="builds-list">
               <div class="no-builds-message" id="no-builds-message">
-                Configure Jenkins and fetch builds to get started
+                Configure Jenkins and paste a console URL to analyze build logs
               </div>
             </div>
           </div>
