Refactor: cleaned up data files, renamed JS modules, added utils and tools, updated .gitignore

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -321,9 +321,9 @@
   <script src="js/utils.js"></script>
   <script src="js/terminal.js"></script>
   <script src="js/profiles.js"></script>
-  <script src="js/command-mode.js"></script>
-  <script src="js/troubleshoot-mode.js"></script>
-  <script src="js/logs-mode.js"></script>
+  <script src="js/commandMode.js"></script>
+  <script src="js/troubleshootMode.js"></script>
+  <script src="js/logsMode.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
