Refactor frontend to feature-based folders; remove duplicates; update .gitignore

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AI Shell Assistant</title>
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/logs-mode.css" />
+  <link rel="stylesheet" href="shared/css/style.css" />
+  <link rel="stylesheet" href="cicd/logs.css" />
   <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/xterm/lib/xterm.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm/css/xterm.css"/>
@@ -318,12 +318,12 @@
   <div id="toast-container" aria-live="polite" aria-atomic="true"></div>
 
   <!-- Load modular JavaScript files -->
-  <script src="js/utils.js"></script>
-  <script src="js/terminal.js"></script>
-  <script src="js/profiles.js"></script>
-  <script src="js/command-mode.js"></script>
-  <script src="js/troubleshoot-mode.js"></script>
-  <script src="js/logs-mode.js"></script>
-  <script src="js/main.js"></script>
+  <script src="shared/js/utils.js"></script>
+  <script src="terminal/terminal.js"></script>
+  <script src="shared/js/profiles.js"></script>
+  <script src="command/command-mode.js"></script>
+  <script src="troubleshoot/troubleshoot-mode.js"></script>
+  <script src="cicd/logs-mode.js"></script>
+  <script src="shared/js/main.js"></script>
 </body>
 </html>
