Logs tab separated and visible

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,9 +50,9 @@
         <div class="chat-header">
           <img src="assets/brain.svg" alt="Brain Logo" class="brain-logo" />
           <span class="logo-text">opsPilot AI</span>
-          <div class="mode-toggle hidden">
-            <button id="mode-command" class="mode-btn active">Command</button>
-            <button id="mode-troubleshoot" class="mode-btn">Troubleshoot</button>
+          <div class="mode-toggle">
+            <button id="mode-command" class="mode-btn hidden">Command</button>
+            <button id="mode-troubleshoot" class="mode-btn hidden">Troubleshoot</button>
             <button id="mode-logs" class="mode-btn">Logs</button>
           </div>
           <div class="header-actions">
