chat tab added + made chat Ui stable

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,13 +51,11 @@
           <img src="assets/brain.svg" alt="Brain Logo" class="brain-logo" />
           <span class="logo-text">opsPilot AI</span>
           <div class="mode-toggle">
-            <button id="mode-command" class="mode-btn hidden">Command</button>
-            <button id="mode-troubleshoot" class="mode-btn hidden">Troubleshoot</button>
+            <button id="mode-chat" class="mode-btn active">Chat</button>
             <button id="mode-logs" class="mode-btn">Logs</button>
+            <button id="mode-terminal" class="mode-btn">Terminal</button>
           </div>
-          <div class="header-actions">
-            <button id="toggle-terminal-btn" class="secondary-btn">Terminal</button>
-          </div>
+          <div class="header-actions"></div>
         </div>
         <div id="chat-container"></div>
 
