--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
           <div class="mode-toggle">
             <button id="mode-chat" class="mode-btn active">Chat</button>
             <button id="mode-logs" class="mode-btn">Logs</button>
-            <button id="mode-terminal" class="mode-btn">Terminal</button>
+            <button id="mode-terminal" class="mode-btn" onclick="openTerminalFull()">Terminal</button>
           </div>
           <div class="header-actions"></div>
         </div>
