--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
           <div class="mode-toggle">
             <button id="mode-chat" class="mode-btn active">Chat</button>
             <button id="mode-logs" class="mode-btn">Logs</button>
-            <button id="mode-terminal" class="mode-btn" onclick="openTerminalFull()">Terminal</button>
+            <button id="mode-terminal" class="mode-btn" onclick="openTerminalSplit()">Terminal</button>
           </div>
           <div class="header-actions"></div>
         </div>
@@ -128,6 +128,9 @@
           </div>
         </div>
       </div>
+
+      <!-- Vertical Resizer -->
+      <div id="split-resizer" class="split-resizer" aria-label="Resize panels" title="Drag to resize"></div>
 
       <!-- Right Panel: Terminal -->
       <div class="right-panel collapsed" id="terminal-panel">
