--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AI Shell Assistant</title>
   <link rel="stylesheet" href="shared/css/style.css" />
+  <link rel="stylesheet" href="shared/css/fixes.css" />
   <link rel="stylesheet" href="cicd/logs.css" />
   <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/xterm/lib/xterm.min.js"></script>
