--- a/frontend/index.html
+++ b/frontend/index.html
@@ -114,7 +114,7 @@
                   <small class="form-help">Direct link to specific Jenkins job console</small>
                 </div>
                 <button id="fetch-console-btn" class="primary-btn">
-                  <span class="btn-text">Analyze Console</span>
+                  <span class="btn-text">Load Logs</span>
                   <span class="spinner hidden"></span>
                 </button>
               </div>
@@ -134,7 +134,7 @@
                 </div>
                 <div class="console-actions">
                   <button id="analyze-console-btn" class="primary-btn">
-                    <span class="btn-text">🔍 Analyze & Suggest Fix</span>
+                    <span class="btn-text">🔍 Analyze Logs</span>
                     <span class="spinner hidden"></span>
                   </button>
                 </div>
